# OCR_VDT26

./: .env.example  .gitignore  README.md  Xây dựng hệ thống OCR.md  Xây dựng hệ thống OCR.txt  pyproject.toml  requirements-extra.txt  requirements.txt
configs/: default.yaml  logging.yaml
data/ground_truth/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
data/splits/: .gitkeep  dev.txt  test.txt  train.txt
data/synthetic/: .gitkeep
docker/: Dockerfile  docker-compose.yml
outputs/: compliance_eform1.docx  compliance_eform1.json  eval_compliance.json  eval_compliance.md  eval_pdf.csv  eval_pdf.md  eval_scan-rapidocr.md  eval_scan-tesseract.csv  eval_scan-tesseract.md  eval_scan-vietocr.csv  eval_scan-vietocr.md  eval_scan.csv  eval_scan.md
scripts/: make_synthetic.py  ocr_demo.py  preprocess_demo.py  run_benchmark.py  run_end_to_end.py  run_eval.py
slides/: build_ocr_deck.ps1  index.html
src/ocr_idp/: __init__.py  __main__.py  cli.py  config.py  logging_conf.py  pipeline.py  types.py
src/ocr_idp/api/: __init__.py  app.py  models.py
src/ocr_idp/compliance/: __init__.py  engine.py  evaluation.py  models.py  parsers.py  report.py  service.py  summary.py
src/ocr_idp/compliance/rules/: eform1.yaml  eform100.yaml  eform5.yaml  (+6 more)
src/ocr_idp/eval/: __init__.py  benchmark.py  metrics.py  report.py
src/ocr_idp/extract/: __init__.py  anchor_label.py  base.py  layout_based.py  layout_fields.py  llm_claude.py  orchestrator.py  placeholders.py  radio_fields.py  rule_regex.py  table_extract.py
src/ocr_idp/forms/: __init__.py  _regex_plugin.py  base.py
src/ocr_idp/layout/: __init__.py  checkbox.py  signature.py  tables.py
src/ocr_idp/normalize/: __init__.py  apply.py  dates.py  numbers.py  text.py
src/ocr_idp/ocr/: __init__.py  base.py  detection.py  easyocr_engine.py  overlay.py  paddle_engine.py  rapidocr_engine.py  registry.py  tesseract_engine.py  textlayer.py  vietocr_engine.py
src/ocr_idp/preprocess/: __init__.py  base.py  binarize.py  crop.py  denoise.py  deskew.py  pdf_render.py  pipeline_pre.py
src/ocr_idp/synthetic/: __init__.py  generator.py
src/ocr_idp/validate/: __init__.py  validators.py
src/ocr_idp/webapp/: __init__.py  app.py
tests/: test_advanced.py  test_api.py  test_compliance.py  test_engines.py  test_eval.py  test_extract.py  test_forms_bc.py  test_handoff.py  test_layout.py  test_normalize.py  test_ocr.py  test_preprocess.py  test_smoke.py  test_synthetic.py
viettel-pptx/: SKILL.md
(+33 files in other folders)
